--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@pixiv/three-vrm": "^2.1.3",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
-    "@types/three": "^0.177.0",
+    "@types/three": "^0.164.0",
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
-    "three": "^0.150.1"
+    "three": "^0.164.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -28,5 +28,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "three": "^0.164.1",
+    "@types/three": "^0.164.0"
   }
 }
